--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#DA6647"
-backgroundColor="#FFFFFF"
+backgroundColor="#000000"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
 font="sans serif"
