--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@ base="dark"
 primaryColor="#1e88e5"
 backgroundColor="#121212"
 secondaryBackgroundColor="#212121"
-textColor="#262730"
+textColor="#ffffff"
 font="sans serif"
