--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#1e88e5"
+primaryColor="#000000"
 backgroundColor="#121212"
 secondaryBackgroundColor="#212121"
 textColor="#ffffff"
