--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,4 +4,4 @@ primaryColor="#1e88e5"
 backgroundColor="#121212"
 secondaryBackgroundColor="#212121"
 textColor="#ffffff"
-font= "Arial"
+font= "Merriweather"
